examples/test/testpolicy19097.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19097
  namespace: namespace282
spec:
  podSelector:
    matchLabels:
      key30: value19
      key28: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value23
      podSelector:
        matchLabels:
          key12: value15
          key41: value2
          key28: value5
